fix: max width container, text ellipsis overflow

--- a/console/src/app/modules/org-context/org-context.component.scss
+++ b/console/src/app/modules/org-context/org-context.component.scss
@@ -7,6 +7,7 @@
   align-items: center;
   padding: 0;
   min-width: 220px;
+  max-width: 240px;
   padding-bottom: 0.5rem;
   position: relative;
 
@@ -37,7 +38,11 @@
     width: 100%;
 
     button {
+      min-height: 36px;
+      position: relative;
+      overflow: hidden;
       text-align: start;
+      text-overflow: ellipsis;
     }
   }
 }
